// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Admin Features test > finds an admin change admin changes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="p-4 border rounded-sm border-cardBorder"
        id="administrative_package_changes"
      >
        <h1
          class="text-3xl font-semibold mb-2"
          data-testid="undefined-title"
        >
          Administrative Package Changes (6)
        </h1>
        <hr
          class="my-6 bg-slate-200"
        />
        <div
          class="gap-8 flex flex-col"
          data-testid="undefined-child"
        >
          <p
            class="text-sm"
          >
            Administrative changes reflect updates to specific data fields. If you have additional questions, please contact the assigned CPOC.
          </p>
          <div
            class="flex flex-col gap-2"
            data-orientation="vertical"
          >
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="open"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="open"
              >
                <button
                  aria-controls="radix-:r1:"
                  aria-expanded="true"
                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="open"
                  id="radix-:r0:"
                  type="button"
                >
                  <p
                    class="flex flex-row gap-2 text-gray-600"
                  >
                    <strong>
                      Package Added
                    </strong>
                     - 
                    Sat, Dec 31, 2022 07:00:00 PM
                  </p>
                  <svg
                    class="h-4 w-4 shrink-0 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r0:"
                class="text-sm transition-all p-4"
                data-orientation="vertical"
                data-state="open"
                id="radix-:r1:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
              >
                <div
                  class="pb-4 pt-0"
                >
                  <div
                    class="flex flex-col gap-6"
                  >
                    <div>
                      <h2
                        class="font-bold text-lg mb-2"
                      >
                        Change Made
                      </h2>
                      <p>
                        add file
                      </p>
                    </div>
                    <div>
                      <h2
                        class="font-bold text-lg mb-2"
                      >
                        Change Reason
                      </h2>
                      <p>
                        missing file
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r3:"
                  aria-expanded="false"
                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r2:"
                  type="button"
                >
                  <p
                    class="flex flex-row gap-2 text-gray-600"
                  >
                    <strong>
                      Package Added
                    </strong>
                     - 
                    Sat, Dec 31, 2022 07:00:00 PM
                  </p>
                  <svg
                    class="h-4 w-4 shrink-0 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r2:"
                class="text-sm transition-all p-4"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r3:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r5:"
                  aria-expanded="false"
                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r4:"
                  type="button"
                >
                  <p
                    class="flex flex-row gap-2 text-gray-600"
                  >
                    <strong>
                      Manual Update
                    </strong>
                     - 
                    Sat, Dec 31, 2022 07:00:00 PM
                  </p>
                  <svg
                    class="h-4 w-4 shrink-0 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r4:"
                class="text-sm transition-all p-4"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r5:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r7:"
                  aria-expanded="false"
                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r6:"
                  type="button"
                >
                  <p
                    class="flex flex-row gap-2 text-gray-600"
                  >
                    <strong>
                      -- --
                    </strong>
                     - 
                    Sat, Dec 31, 2022 07:00:00 PM
                  </p>
                  <svg
                    class="h-4 w-4 shrink-0 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r6:"
                class="text-sm transition-all p-4"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r7:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:r9:"
                  aria-expanded="false"
                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:r8:"
                  type="button"
                >
                  <p
                    class="flex flex-row gap-2 text-gray-600"
                  >
                    <strong>
                      Enable Formal RAI Response Withdraw
                    </strong>
                     - 
                    Sat, Dec 31, 2022 07:00:00 PM
                  </p>
                  <svg
                    class="h-4 w-4 shrink-0 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:r8:"
                class="text-sm transition-all p-4"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:r9:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
            <div
              class="border-b"
              data-orientation="vertical"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-:rb:"
                  aria-expanded="false"
                  class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-state="closed"
                  id="radix-:ra:"
                  type="button"
                >
                  <p
                    class="flex flex-row gap-2 text-gray-600"
                  >
                    <strong>
                      Disable Formal RAI Response Withdraw
                    </strong>
                     - 
                    Sat, Dec 31, 2022 07:00:00 PM
                  </p>
                  <svg
                    class="h-4 w-4 shrink-0 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-:ra:"
                class="text-sm transition-all p-4"
                data-orientation="vertical"
                data-state="closed"
                hidden=""
                id="radix-:rb:"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
        </div>
      </section>
      ,
    </div>
  </body>,
  "container": <div>
    <section
      class="p-4 border rounded-sm border-cardBorder"
      id="administrative_package_changes"
    >
      <h1
        class="text-3xl font-semibold mb-2"
        data-testid="undefined-title"
      >
        Administrative Package Changes (6)
      </h1>
      <hr
        class="my-6 bg-slate-200"
      />
      <div
        class="gap-8 flex flex-col"
        data-testid="undefined-child"
      >
        <p
          class="text-sm"
        >
          Administrative changes reflect updates to specific data fields. If you have additional questions, please contact the assigned CPOC.
        </p>
        <div
          class="flex flex-col gap-2"
          data-orientation="vertical"
        >
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="open"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="open"
            >
              <button
                aria-controls="radix-:r1:"
                aria-expanded="true"
                class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="open"
                id="radix-:r0:"
                type="button"
              >
                <p
                  class="flex flex-row gap-2 text-gray-600"
                >
                  <strong>
                    Package Added
                  </strong>
                   - 
                  Sat, Dec 31, 2022 07:00:00 PM
                </p>
                <svg
                  class="h-4 w-4 shrink-0 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r0:"
              class="text-sm transition-all p-4"
              data-orientation="vertical"
              data-state="open"
              id="radix-:r1:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
            >
              <div
                class="pb-4 pt-0"
              >
                <div
                  class="flex flex-col gap-6"
                >
                  <div>
                    <h2
                      class="font-bold text-lg mb-2"
                    >
                      Change Made
                    </h2>
                    <p>
                      add file
                    </p>
                  </div>
                  <div>
                    <h2
                      class="font-bold text-lg mb-2"
                    >
                      Change Reason
                    </h2>
                    <p>
                      missing file
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r3:"
                aria-expanded="false"
                class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r2:"
                type="button"
              >
                <p
                  class="flex flex-row gap-2 text-gray-600"
                >
                  <strong>
                    Package Added
                  </strong>
                   - 
                  Sat, Dec 31, 2022 07:00:00 PM
                </p>
                <svg
                  class="h-4 w-4 shrink-0 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r2:"
              class="text-sm transition-all p-4"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r3:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r5:"
                aria-expanded="false"
                class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r4:"
                type="button"
              >
                <p
                  class="flex flex-row gap-2 text-gray-600"
                >
                  <strong>
                    Manual Update
                  </strong>
                   - 
                  Sat, Dec 31, 2022 07:00:00 PM
                </p>
                <svg
                  class="h-4 w-4 shrink-0 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r4:"
              class="text-sm transition-all p-4"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r5:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r7:"
                aria-expanded="false"
                class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r6:"
                type="button"
              >
                <p
                  class="flex flex-row gap-2 text-gray-600"
                >
                  <strong>
                    -- --
                  </strong>
                   - 
                  Sat, Dec 31, 2022 07:00:00 PM
                </p>
                <svg
                  class="h-4 w-4 shrink-0 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r6:"
              class="text-sm transition-all p-4"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r7:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:r9:"
                aria-expanded="false"
                class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:r8:"
                type="button"
              >
                <p
                  class="flex flex-row gap-2 text-gray-600"
                >
                  <strong>
                    Enable Formal RAI Response Withdraw
                  </strong>
                   - 
                  Sat, Dec 31, 2022 07:00:00 PM
                </p>
                <svg
                  class="h-4 w-4 shrink-0 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:r8:"
              class="text-sm transition-all p-4"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:r9:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
          <div
            class="border-b"
            data-orientation="vertical"
            data-state="closed"
          >
            <h3
              class="flex"
              data-orientation="vertical"
              data-state="closed"
            >
              <button
                aria-controls="radix-:rb:"
                aria-expanded="false"
                class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180 bg-gray-100 px-3"
                data-orientation="vertical"
                data-radix-collection-item=""
                data-state="closed"
                id="radix-:ra:"
                type="button"
              >
                <p
                  class="flex flex-row gap-2 text-gray-600"
                >
                  <strong>
                    Disable Formal RAI Response Withdraw
                  </strong>
                   - 
                  Sat, Dec 31, 2022 07:00:00 PM
                </p>
                <svg
                  class="h-4 w-4 shrink-0 transition-transform duration-200"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="radix-:ra:"
              class="text-sm transition-all p-4"
              data-orientation="vertical"
              data-state="closed"
              hidden=""
              id="radix-:rb:"
              role="region"
              style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
            />
          </div>
        </div>
      </div>
    </section>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Admin Features test > finds no admin changes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      ,
    </div>
  </body>,
  "container": <div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
